# ML_in_Crowd_Modelling_and_Simulation

./: .gitignore  README.md
EX1/: Questions.md  README.md
EX1/CellularAutomata/: create_scenario.py  main.py  requirements.txt  (+1 more)
EX2/: Questions-Ex2.md  README.md  clean_build.sh  run_vadere.sh  task3.sh
EX2/ScenarioCustomizer/: README.md  pyproject.toml
EX2/ScenarioCustomizer/scenario_customizer/: __init__.py  argument_parsing.py  cli_input.py  main.py  scenario.py
EX2/ScenarioCustomizer/scenario_customizer/default_scenario_elements/: pedestrian.json
EX3/: README.md  clean-notebooks.sh  environment.yml  init_conda.sh  init_venv.ps1  init_venv.sh  requirements.txt  vadere_cleanbuild.sh  vadere_run.sh
EX4/: README.md  clean-notebooks.ps1  environment.yml
EX5/: README.md  environment.yml
FinalProject/: README.md  clean-notebooks.sh  environment.yml  finalproject.py  pyproject.toml
FinalProject/notebooks/: gaussian_process.ipynb  mnist_mlp.ipynb  task_1_gaussian_process.ipynb  task_2_mnist_cnn.ipynb  task_2_mnist_mlp.ipynb  task_3_slnn_gp.ipynb  task_4_cnn_gp.ipynb
FinalProject/src/: ml_model.py
FinalProject/src/data/: data_helpers.py
FinalProject/src/evaluation/: model_evaluation.py
FinalProject/src/models/convolutional_neural_networks/: cnn.py  cnn_gp.py
FinalProject/src/models/gaussian_process/: __init__.py  binary_classification.py  kernels.py  regression.py
FinalProject/src/models/multi_layer_perceptron/: __init__.py  activations.py  loss_functions.py  mlp.py  optimizer.py
FinalProject/src/visualizations/: dataset.py  evaluation.py
(+113 files in other folders)
