[tool.poetry]
name = "FinalProject"
version = "0.1.0"
description = ""
authors = ["Ahmed Mokhtar <ahmed.ashraf.mokhtar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"